--- a/travel-project/public/css/templatemo-style.css
+++ b/travel-project/public/css/templatemo-style.css
@@ -317,9 +317,9 @@ header {
 .slider .content-section {
   padding-top: 0px;
   min-width: 100%;
-  min-height: 100vh;
+  min-height: 90vh;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   text-align: center;
 }
 
@@ -335,27 +335,25 @@ header {
   text-align: right;
   position: absolute;
   z-index: 10;
-  top: 50%;
+  top: 60%;
   right: 60px;
-  /* -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%); */
   display: inline-block;
+  
 }
 
 .Modern-Slider .info h1 {
   margin-top: 0px;
   margin-bottom: 15px;
   font-size: 48px;
-  color: #fff;
+  color: red;
   font-weight: 700;
+  
 }
 
 .Modern-Slider .info p {
   font-size: 15px;
   color: #fff;
+  
 }
 
 .Modern-Slider .info .white-button {
@@ -413,29 +411,9 @@ header {
   display: block;
 }
 
-.Modern-Slider .item-1 .image {
-  background-image: url(../img/slide_1.jpg);
-}
 
-.Modern-Slider .item-2 .image {
-  background-image: url(../img/slide_2.jpg);
-}
 
-.Modern-Slider .item-3 .image {
-  background-image: url(../img/slide_3.jpg);
-}
 
-.Modern-Slider .PrevArrow:before{content:'\f104';}
-
-.Modern-Slider .item .image {
-  /* animation: zoomin 12s ease-in-out infinite alternate;
-  -webkit-animation: zoomin 12s ease-in-out infinite alternate; */
-}
-
-@keyframes zoomin {
-    0% {-webkit-transform: scale(1);}
-    100% {-webkit-transform: scale(1.2);}
-}
 
 .Modern-Slider {background:transparent;}
 
@@ -785,7 +763,7 @@ header {
   display: inline-block;
   text-align: left;
   margin-bottom: 10px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   border-bottom: 1px solid #ddd;
 }
 
@@ -918,36 +896,6 @@ header {
 #photo-details .section-heading {
   padding-left: 120px ;
 }
-
-
-/* Footer Style */
-
-.footer {
-  background-color: rgba(12,12,12,0.9);
-  height: 80px;
-  line-height: 80px;
-  display: inline-block;
-  text-align: center;
-  width: 100%;
-
-}
-
-.footer p {
-  margin-bottom: 0px;
-  font-size: 13px;
-  line-height: 80px;
-  color: #fff;
-  letter-spacing: 0.5px;
-  font-weight: 300;
-}
-
-.footer p a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: 600;
-}
-
-
 
 /* Responsive Style */
 
