--- a/travel-project/src/Components/MyProfile/MyProfile.module.css
+++ b/travel-project/src/Components/MyProfile/MyProfile.module.css
@@ -12,3 +12,20 @@
 }
 
 
+.MyProfileListOfComments {
+    display: flex;
+    gap: 40px;
+    background-color: #f4f4f4;
+    padding: 5px;
+}
+
+.MyProfileComment {
+    list-style: none;
+    text-align: left;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.MyProfileComment p{
+    font-size: 16px;
+}
