--- a/travel-project/public/css/templatemo-style.css
+++ b/travel-project/public/css/templatemo-style.css
@@ -317,7 +317,7 @@ header {
 .slider .content-section {
   padding-top: 0px;
   min-width: 100%;
-  min-height: 90vh;
+  min-height: 100vh;
   width: 100%;
   height: 90vh;
   text-align: center;
@@ -336,16 +336,18 @@ header {
   position: absolute;
   z-index: 10;
   top: 60%;
-  right: 60px;
+  right: 120px;
   display: inline-block;
-  
+  background-color: rgba(119, 119, 119, 0.6);
+  padding: 20px;
+  border-radius: 30px;
 }
 
 .Modern-Slider .info h1 {
   margin-top: 0px;
   margin-bottom: 15px;
   font-size: 48px;
-  color: red;
+  color: white;
   font-weight: 700;
   
 }
