--- a/travel-project/src/Components/Home/Home.module.css
+++ b/travel-project/src/Components/Home/Home.module.css
@@ -1,13 +1,17 @@
 .wholeCarousel {
-   /* position: fixed;
-   top: 0;
-   left: 0;
-   height: 1900px;
-   width: 2000px; */
-   background-color: grey;
+    padding-top: 0px;
+    min-width: 100%;
+    min-height: 100vh;
+    width: 100%;
+    height: 100vh;
+   background-color: rgba(12,12,12, 0.9);
 }
 
-.d-block .w-100 {
+.imageCarousel img{
+    min-width: 100%;
+    min-height: 100vh;
+    width: 100%;
+    height: 20vh;
     object-fit: cover;
 }
 
