--- a/travel-project/src/Components/AddRecommendion/Recommendation.module.css
+++ b/travel-project/src/Components/AddRecommendion/Recommendation.module.css
@@ -5,6 +5,7 @@
     border: 0px;
     padding: 10px 15px 12px 15px;
     font-weight: bold;
+    font-size: 14px;
 }
 
 
@@ -14,4 +15,5 @@
     border: 0px;
     padding: 10px 15px 12px 15px;
     font-weight: bold;
+    font-size: 14px;
 }
