--- a/travel-project/src/Components/Blogs/blogs.module.css
+++ b/travel-project/src/Components/Blogs/blogs.module.css
@@ -2,14 +2,16 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 1200px
 }
 
 
 .BlogsItemWhole {
     display: flex;
     gap: 100px;
-    justify-content: start;
+    justify-content:start;
     /* padding: 5px; */
+    width: 500px;
 }
 
 
